--- a/blog/static/less/blog.less
+++ b/blog/static/less/blog.less
@@ -1,16 +1,21 @@
+@import "_fonts";
+
 html {
   font-size: 62.5%;
   font-weight: 400;
 }
+
 body {
   font-size: 1.65rem;
   -webkit-font-smoothing: antialiased;
 }
+
 a {
-  text-decoration: none;
-  color: #ebacca;
+	text-decoration: none;
+	color: #ebacca;
 }
+
 a:hover {
-  text-decoration: none;
-  color: pink;
+	text-decoration: none;
+	color: pink;
 }
