--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,28 +1,22 @@
-{% load staticfiles %}
-<html>
-<head>
-	<title>Лизаветин питонячий блоУг</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-</head>
-<body>
-	<h2>Лизаветин питонячий блоУг</h2>
-	<div class="post-list">
-	{% for post in posts %}
-   		<div class="post-list__item">
-	   		<div>
-	   			{% load thumbnail %}
-		   		{% thumbnail post.image "100x100" crop="center" as im %}
-		    		<img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-				{% endthumbnail %}
-			</div>
-   			<span>Дата публикации: {{ post.published_date|date:"d M Y" }}</span>
-   			<h1><a href="">{{ post.title }}</a></h1>
-        	<p>{{ post.text|linebreaksbr }}</p>
-        	<b>Автор: {{ post.author }}</b>
-   		</div>
-	{% endfor %}
-	</div>
-</body>
-</html>
+	{% extends "./base.html" %}
+
+	{% block content %}
+		<div class="post-list">
+		{% for post in posts %}
+	   		<div class="post-list__item">
+		   		<div class="post-list__thumbnail">
+		   			{% load thumbnail %}
+			   		{% thumbnail post.image "100x100" crop="center" as im %}
+			    		<img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+					{% endthumbnail %}
+				</div>
+				<div class="post-list__content">
+		   			<span>Дата публикации: {{ post.published_date|date:"d M Y" }}</span>
+		   			<h3><a href="">{{ post.title }}</a></h3>
+		        	<p>{{ post.text|linebreaksbr }}</p>
+		        	<b>Автор: {{ post.author }}</b>
+	        	</div>
+	   		</div>
+		{% endfor %}
+		</div>
+	{% endblock %}
