--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -42,6 +42,42 @@ header h2 {
 footer {
   background-color: #FFB6C1;
   padding: 20px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+     -moz-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer a {
+  color: #FFFFFF;
+  font-size: 26px;
+  margin-right: 12px;
+  line-height: 32px;
+  display: inline-block;
+  vertical-align: middle;
+}
+footer a:hover {
+  color: #FF5A5A;
+}
+footer a:focus {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+footer a:last-child {
+  margin-right: 0;
+}
+footer a h3 {
+  margin: 0;
 }
 .main-content {
   background-color: #FFF2F2;
