--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+	<script src="https://use.fontawesome.com/283a5ff424.js"></script>
 	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
@@ -17,6 +18,17 @@
 
 </section>
 
-<footer></footer>
+<footer>
+	<div>
+		<a href="https://twitter.com/lisaveta_k" target="_blank"><i class="fa fa-twitter"></i></a>
+		<a href="https://github.com/Lisaveta-K" target="_blank"><i class="fa fa-github"></i></a>
+		<a href="https://instagram.com/lisaveta_k" target="_blank"><i class="fa fa-instagram"></i></a>
+		<a href="https://vk.com/khudyakova_lisa" target="_blank"><i class="fa fa-vk"></i></a>
+		<a href="https://www.facebook.com/elizaveta.khudiakova" target="_blank"><i class="fa fa-facebook"></i></a>
+	</div>
+	<div>
+		<a href="https://github.com/Lisaveta-K/djangoblog" target="_blank"><h3>Этот проект на GitHub</h3></a>
+	</div>
+</footer>
 </body>
 </html>
