--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
-<header><h2>Лизаветин питонячий блоУг</h2></header>
+<header><a href="{% url 'post_list' %}"><h2>Лизаветин питонячий блоУг</h2></a></header>
 
 <section class="main-content">
 
