--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -114,3 +114,30 @@ footer a h3 {
   display: block;
   float: right;
 }
+.error {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.error__code {
+  font-family: 'Lobster', cursive;
+  font-weight: 400;
+  font-size: 200px;
+  margin: 50px 0;
+  color: #FFB6C1;
+}
+.error__descripion {
+  font-size: 50px;
+}
