--- a/blog/static/less/block/header.less
+++ b/blog/static/less/block/header.less
@@ -1,9 +1,12 @@
 header {
 	background-color: @color-pink;
 	padding: 20px;
+	display: flex;
+	justify-content: space-between;
 
 	a {
 		color: @white;
+		display: block;
 
 		&:hover {
 			color: @color-salmon;
