--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,8 +15,11 @@
 </head>
 <body>
 <header>
-<a href="{% url 'post_list' %}"><h2>Лизаветин питонячий блоУг</h2></a>
-<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></header>
+	<a href="{% url 'post_list' %}"><h2>Лизаветин питонячий блоУг</h2></a>
+	{% if user.is_authenticated %}
+		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+	{% endif %}
+</header>
 
 <section class="main-content">
 
