--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,6 +11,11 @@
 				</div>
 				<div class="post-list__content">
 		   			<span>Дата публикации: {{ post.published_date|date:"d M Y" }}</span>
+		   			{% if user.is_authenticated %}
+		   				{% if post.author == user %}
+		   					<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+		   				{% endif %}
+		   			{% endif %}
 		   			<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
 		        	<div>{{ post.text|safe }}</div>
 		        	<b>Автор: {{ post.author }}</b>
