--- a/blog/static/less/block/header.less
+++ b/blog/static/less/block/header.less
@@ -3,10 +3,10 @@ header {
 	padding: 20px;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 
 	a {
 		color: @white;
-		display: block;
 
 		&:hover {
 			color: @color-salmon;
@@ -15,6 +15,20 @@ header {
 		&:focus {
 			text-decoration: none;
 			color: @white;
+		}
+	}
+
+	.header-auth {
+		display: flex;
+		flex: 10 auto;
+		justify-content: flex-end;
+
+		&__item {
+			margin-right: 20px;
+
+			&:last-child {
+				margin-right: 0;
+			}
 		}
 	}
 }
