--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -179,3 +179,33 @@ footer a h3 {
 .error__descripion {
   font-size: 50px;
 }
+form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+     -moz-box-orient: vertical;
+     -moz-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+form label {
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+form label:first-child {
+  margin-top: 0;
+}
+form textarea {
+  width: 100%;
+}
+form button {
+  margin-top: 15px;
+}
+form .helptext {
+  margin-bottom: 25px;
+}
