--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Лизаветин питонячий блоУг</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
