--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,6 +14,7 @@
 		   			{% if user.is_authenticated %}
 		   				{% if post.author == user %}
 		   					<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+		   					<a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-trash"></span></a>
 		   				{% endif %}
 		   			{% endif %}
 		   			<h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
